# oxidized-gpt

./: Cargo.toml  README.md
src/: app.rs  main.rs  settings.rs
