[package]
name = "oxidized-gpt"
version = "1.0.0"
edition = "2021"
description = "ChatGPT desktok version written in Rust"
authors = ["HelllWorld "]
license = "MIT"
repository = "https://github.com/"
keywords = ["ChatGPT", "OpenAI","desktop","gui","rust","egui","eframe"]
categories = ["AI Assistance"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
eframe = "0.22.0"
egui = { version = "0.22.0", features = ["default_fonts"]}
egui_extras = { version = "0.22.0", features = ["image"] }
egui-notify = "0.7.0"
image = "0.24.6"
chatgpt_rs = "1.1.0"
config = "0.13.3"
confy = "0.5.1"
serde = "1.0.159"
serde_derive = "1.0.159"

[dev-dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }

